--- a/config/database.yml
+++ b/config/database.yml
@@ -50,6 +50,5 @@ test:
 production:
   <<: *default
   database: furima_28324_production
-  username: root
-  password: <%= ENV['DATABASE_PASSWORD'] %>
-  socket: /var/lib/mysql/mysql.sock
+  username: furima_28324
+  password: <%= ENV['FURIMA_28324_DATABASE_PASSWORD'] %>
